--- a/Projeto 1/index.html
+++ b/Projeto 1/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="tw, tsiw, projeto, webpage, restaurante">
     <title>Lino's - Restaurante de Comida Tradicional</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -30,6 +30,7 @@
 
     <main id="home">
         <div class="fullimg">
+            <h2>O prazer de bem comer</h2>
             <img src="img/hero_big.webp" alt="Imagem do restaurante">
         </div>
     </main>
@@ -95,18 +96,36 @@
             </div>
         </div>
     </section>
+    
     <section id="contactos">
         <h2>Contactos</h2>
-        <form action="#" method="post">
-            <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Seu email" required>
-            <label for="mensagem">Mensagem</label>
-            <textarea id="mensagem" name="mensagem" rows="4" placeholder="Escreva a sua mensagem" required></textarea>
-            <button class="cta-button" type="submit">Enviar</button>
-        </form>
+        <div class="contact-container">
+            <div class="form-container">
+                <form action="#" method="post">
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome" name="nome" placeholder="O seu nome" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="O seu email" required>
+                    <label for="mensagem">Mensagem</label>
+                    <textarea id="mensagem" name="mensagem" rows="4" placeholder="Escreva a sua mensagem" required></textarea>
+                    <button class="cta-button" type="submit">Enviar</button>
+                </form>
+            </div>
+            <div class="info-container">
+                <div class="contact-info">
+                    <p><strong>Endereço:</strong> ESMAD, Rua Dom Sancho I, 4480-876 Vila do Conde, Portugal</p>
+                    <p><strong>Telefone:</strong> +351 123 456 789</p>
+                    <p><strong>Email:</strong> contacto@esmad.ipp.pt</p>
+                </div>
+                <div class="map-container">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3125.8342516067684!2d-8.742194!3d41.379536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd24682a7a6b8ab7%3A0x9f2349d59e196b14!2sESMAD!5e0!3m2!1sen!2spt!4v1676055484135!5m2!1sen!2spt"
+                        width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
     </section>
+    
 
     <section id="reservas">
         <h2>Reservas</h2>
