Alterações a imagem hero section

--- a/Projeto 1/index.html
+++ b/Projeto 1/index.html
@@ -33,7 +33,7 @@
     <main id="home">
         <div class="fullimg">
             <h2>O prazer de bem comer</h2>
-            <img src="img/hero_big.webp" alt="Vista do interior acolhedor do restaurante Lino's">
+            <img src="img/hero_big.jpg" alt="Vista do interior acolhedor do restaurante Lino's">
         </div>
     </main>
 
@@ -160,7 +160,7 @@
     <a href="tel:+1234567890" class="contact-button">
         <img src="img/contacto.png" alt="Contacte-nos">
     </a>
-    
+
     <!-- Secção de footer com mais formatação de texto, utilização de links externos numa nova janela e utilização de biblioteca de icons externa -->
     <footer>
         <p>&copy; 2024 Lino's. Todos os direitos reservados - António Amorim - <b>TSIW</b>.</p>
